--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -4,3 +4,7 @@ http://ionicframework.com/docs/theming/ */
 :root {
   --ion-background-color: #EAF2F3;
 }
+
+input[type="search"] {
+  background-color: #ffffff !important;
+}
